--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -55,7 +55,7 @@ table {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 32px;
     color: #333;
-    background-image: url('file:/Users/Lexie.Murphy/Desktop/Basic-Portfolio/assets/images/qbkls.png');
+    background-image: url('../images/LemonsBackground.jpg');
   }
 
   .header {
@@ -87,13 +87,6 @@ table {
     line-height: 25px;
   }
 
-  .header a.name {
-    font-size: 25px;
-    font-weight: bold;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 30px;
-  }
 
   .header a:default {
     background-color: white;
@@ -129,10 +122,11 @@ table {
 
 
   #mainmiddlesection {
-    width: 919px;
-    border: .5px solid #dddddd;
+    width: 350px;
+    border: 5px solid rgb(255, 220, 0);
     margin-left: auto;
     margin-right: auto;
+    margin-top: 120px;
     margin-bottom: 120px;
     overflow: auto;
     clear: both;
@@ -148,7 +142,7 @@ table {
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 25px;
     font-weight: bold;
-    color: #4aaaa5;
+    text-align: left;
   }
   
   section {
@@ -172,15 +166,45 @@ table {
     border: 1px solid #dddddd;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
+    text-align: top;
   }
 
   .formsubmit {
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    left: 30%;
+    font-style: bold;
+    font-size: 20px;
     padding: 8px 25px 8px 25px;
-    background-color: #4aaaa5;
-    color: white;
+    background-color: rgb(255, 220, 0);
+    color: #333;
   }
 
+  .homeIconSection {
+    float: right;
+  }
+
+  .homeIcon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .icon {
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    height: 100px;
+    padding: 0px 10px 0px 10px;
+    cursor: pointer;
+  }
+
+  .iconsRow {
+    margin: 0px;
+    height: 100px;
+  }
+  
   
   #division {
     background: white;
@@ -189,10 +213,12 @@ table {
   }
   
   footer {
-    padding: 20px 20px 0px 20px;
-    border-top: 5px solid #4aaaa5;
-    background: #666666;
-    color: white;
+    padding: 5px 5px 5px 5px;
+    margin-bottom: 80px;
+    border-top: 5px solid rgb(255, 220, 0);
+    border-bottom: 5px solid rgb(255,220,0);
+    background: white;
+    color: black;
     text-align: center;
     font-size: 12px;
     left: 0;
