--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,22 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+
  
- 
- 
+
+#name {
+  font-size: 50px;
+  text-align: center;
+
+}
+
+#myModal {
+  align-content: center;
+}
+
  
  body {
     font-size: 24px;
@@ -87,13 +100,6 @@ table {
     line-height: 25px;
   }
 
-  .header a.name {
-    font-size: 25px;
-    font-weight: bold;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 30px;
-  }
 
   .header a:default {
     background-color: white;
@@ -122,9 +128,10 @@ table {
 
   #mainmiddlesection {
     width: 919px;
-    border: .5px solid #dddddd;
+    border: 5px solid rgb(255, 220, 0);
     margin-left: auto;
     margin-right: auto;
+    margin-top: 120px;
     margin-bottom: 120px;
     overflow: auto;
     clear: both;
@@ -134,7 +141,7 @@ table {
   }
 
   .AboutMe {
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 10px 10px;
     border-bottom: 2px solid #dddddd;
     margin-bottom: 20px;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
@@ -151,7 +158,9 @@ table {
   }
 
   .profile-image {
-    float: left;
+    margin: auto;
+    position: relative;
+    left:34%;
     width: 260px;
     height: 240px;
     padding: 0px 30px 0px 20px;
@@ -166,6 +175,7 @@ table {
     width: 120px;
     height: 100px;
     padding: 0px 10px 0px 10px;
+    cursor: pointer;
   }
 
   .iconsRow {
@@ -181,7 +191,7 @@ table {
   
   footer {
     padding: 5px 5px 5px 5px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     border-top: 5px solid rgb(255, 220, 0);
     border-bottom: 5px solid rgb(255,220,0);
     background: white;
@@ -193,6 +203,61 @@ table {
     width: 100%;
     position: fixed;
   }
+
+#myBtn {
+  margin: auto;
+  position: relative;
+  left: 44%;
+  background-color: rgb(255, 220, 0);
+  font-size: 20px;
+  font-style: bold;
+  font: black;
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+
+.modal-content {
+  background-color: #eed43f;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
   
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -217,3 +282,12 @@ table {
   position: static;
 }
 }
+
+@media screen and (max-width: 640px) {
+  .name {
+    float: left;
+    display: block;
+    text-align: left;
+    position: static;
+  }
+  }
