--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -47,7 +47,10 @@ table {
 	border-spacing: 0;
 }
  
- 
+
+.h3 {
+    font: black;
+}
  
  
  body {
@@ -55,7 +58,7 @@ table {
     font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 32px;
     color: #333;
-    background-image: url('file:/Users/Lexie.Murphy/Desktop/Basic-Portfolio/assets/images/qbkls.png');
+    background-image: url('../images/LemonsBackground.jpg');
   }
   
   .header {
@@ -70,8 +73,8 @@ table {
   }
  
   .headercontainer {
-    width: 960px;
-    height: 80px;
+    width: auto;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
   }
@@ -90,7 +93,7 @@ table {
   .header a.name {
     font-size: 25px;
     font-weight: bold;
-    background-color: #4aaaa5;
+    background-color: rgb(255, 220, 0);
     color: white;
     padding: 30px;
   }
@@ -101,16 +104,16 @@ table {
 
   .header a:hover {
     background-color: #ddd;
-    color: #4aaaa5;
+    color:rgb(255, 220, 0);
   }
 
   .header a:active {
-    background-color: #4aaaa5;
+    background-color: rgb(255, 220, 0);
     color: white;
   }
 
   .header a:focus {
-    background-color: #4aaaa5;
+    background-color: rgb(255, 220, 0);
     color: white;
   }
 
@@ -129,9 +132,10 @@ table {
 
   #mainmiddlesection {
     width: 919px;
-    border: .5px solid #dddddd;
+    border: 5px solid rgb(255, 220, 0);
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
     margin-bottom: 120px;
     overflow: auto;
     clear: both;
@@ -141,13 +145,13 @@ table {
   }
 
   .Portfolio {
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 10px 10px;
     border-bottom: 2px solid #dddddd;
     margin-bottom: 20px;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 25px;
     font-weight: bold;
-    color: #4aaaa5;
+    font: #333;
   }
   
   section {
@@ -157,16 +161,42 @@ table {
     align-content: center;
   }
 
-  .profile-image {
-    float: left;
-    width: 260px;
-    height: 240px;
-    padding: 0px 30px 0px 20px;
-    text-decoration-color: white;
-    background: #fff;
-    image: url('file:/Users/Lexie.Murphy/Desktop/Basic-Portfolio/assets/images/Lexie.jpg');
+  .codeLinks {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40px;
+    height: 40px;
+    align-content: center;
+  }
+
+  .codeLinksSection {
+    padding-left: 120px;
+  }
+
+  .homeIconSection {
+    float: right;
+  }
+
+  .homeIcon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .icon {
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    height: 100px;
+    padding: 0px 10px 0px 10px;
+    cursor: pointer;
+  }
+
+  .iconsRow {
+    margin: 0px;
+    height: 100px;
   }
   
+
   #division {
     background: white;
     font-size: 18px;
@@ -174,10 +204,12 @@ table {
   }
   
   footer {
-    padding: 20px 20px 0px 20px;
-    border-top: 5px solid #4aaaa5;
-    background: #666666;
-    color: white;
+    padding: 5px 5px 5px 5px;
+    margin-bottom: 80px;
+    border-top: 5px solid rgb(255, 220, 0);
+    border-bottom: 5px solid rgb(255,220,0);
+    background: white;
+    color: black;
     text-align: center;
     font-size: 12px;
     left: 0;
@@ -186,8 +218,6 @@ table {
     position: fixed;
   }
   
-
-
 
 body {
     background-color: white;
@@ -210,7 +240,6 @@ body {
     padding-left: 0px
 }
 
-/* Content */
 .content {
     background-color: white;
     position: relative;
@@ -219,17 +248,18 @@ body {
     padding-left: 10px;
 }
 
-/* Bottom center text */
 .bottom-center {
     position: absolute;
     z-index: 1;
+    border-right: 4px solid black;
+    border-left: 4px solid black;
     bottom: 30px;
-    width: 240px;
+    width: 260px;
     padding: 10px;
     text-align: center;
     font-size: 18px;
-    background-color:#4aaaa5;
-    color: white;
+    background-color:rgb(255, 220, 0);
+    font:black;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
