--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -58,6 +58,11 @@ table {
 
 }
 
+.resume {
+  width: 600px;
+  height: 700px;
+}
+
 #myModal {
   align-content: center;
 }
@@ -127,12 +132,12 @@ table {
 
 
   #mainmiddlesection {
-    width: 919px;
+    width: 660px;
     border: 5px solid rgb(255, 220, 0);
     margin-left: auto;
     margin-right: auto;
-    margin-top: 120px;
-    margin-bottom: 120px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     overflow: auto;
     clear: both;
     color: #777777;
@@ -191,7 +196,7 @@ table {
   
   footer {
     padding: 5px 5px 5px 5px;
-    margin-bottom: 80px;
+    margin-bottom: 20px;
     border-top: 5px solid rgb(255, 220, 0);
     border-bottom: 5px solid rgb(255,220,0);
     background: white;
